@@ -2,6 +2,7 @@
 
 = 2.10.0 =
 * WordPress 5.4 compatible.
+* Removed an alternative call to the deprecated wp_cache_reset() and preferrably calling wp_cache_init() when wp_cache_switch_to_blog() is not available.
 
 = 2.9.0 =
 * WordPress 5.3 compatible.
